# gnome-main-menu

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  gnome-main-menu.doap  tile-test.c
applet/: Makefile.am  directory-tile-model.c  directory-tile-model.h  directory-tile.c  directory-tile.h  document-tile.c  document-tile.h  file-tile-model.c  main-menu-ui.c  network-tile-model.c  network-tile-model.h  network-tile.c  network-tile.h  storage-tile-model.c  storage-tile-model.h  storage-tile.c  storage-tile.h  system-tile.c  tile-table.c
application-browser/: application-browser.c
application-browser/etc/: Makefile.am  org.mate.gnome-main-menu.application-browser.gschema.xml.in.in
application-browser/src/: Makefile.am  application-browser.c
caja-main-menu/: Makefile.am  caja-main-menu.c  caja-main-menu.h  main-menu.c
data/: Makefile.am  application-browser.desktop.in  application-browser.schemas.in  libslab.pc.in  menu-browser.glade  slab.schemas.in.in
desktop/: gnome-session-save.desktop
libslab/: ChangeLog  Makefile.am  app-shell.c  application-tile.c  application-tile.h  bookmark-agent-egg.h  bookmark-agent.c  bookmark-agent.h  context-menu-view.c  context-menu-view.h  desktop-item-tile-model.c  desktop-item-tile-model.h  directory-tile.c  directory-tile.h  document-tile.c  document-tile.h  double-click-detector.c  double-click-detector.h  eggbookmarkfile.c  file-tile-model.c  file-tile-model.h  gnome-utils.c  gnome-utils.h  grid-view.c  grid-view.h  libslab-bookmarkfile.c  libslab-utils.c  libslab-utils.h  menu-browser.c  menu-browser.h  network-tile-model.c  network-tile.c  slab-gnome-util.c  system-tile.c  system-tile.h  tile-attribute.c  tile-attribute.h  tile-button-view.c  tile-button-view.h  tile-control.c  (+7 more)
main-menu/etc/: Makefile.am  applications.xbel  documents.xbel  org.mate.GNOMEMainMenu.mate-panel-applet.in.in  org.mate.gnome-main-menu.gschema.xml.in.in  org.mate.panel.applet.GNOMEMainMenuFactory.service.in  places.xbel  slab.schemas.in.in  system-items.xbel  system-items.xbel.in  trigger-panel-run-dialog.desktop.in.in
main-menu/src/: Makefile.am  apps-agent.c  apps-agent.h  bookmark-tile-table.c  bookmark-tile-table.h  eggaccelerators.c  eggaccelerators.h  file-area.c  file-area.h  hard-drive-status-tile.c  main-menu-common.h  main-menu-engine.c  main-menu-migration.c  main-menu-migration.h  main-menu-ui.c  main-menu-ui.h  main-menu-utils.c  main-menu-utils.h  main-menu.c  network-status-agent.c  network-status-info.c  network-status-tile.c  recent-apps-tile-table.c  recent-docs-tile-table.c  slab-window.c  slab-window.glade  slab-window.h  system-tile-table.c  system-tile.c  system-tile.h  tile-table.c  tile-table.h  tomboykeybinder.c  tomboykeybinder.h  trigger-panel-run-dialog.c  user-apps-tile-table.c  user-apps-tile-table.h  user-dirs-tile-table.c  user-dirs-tile-table.h  user-docs-tile-table.c  (+1 more)
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  en_IGID.po  en_US.po  es.po  et.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  ko.po  lo.po  lt.po  lv.po  (+23 more)
